# genetic-algorithm-sat-solver-implementation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/genetic_algorithm_sat_solver_implementation/: run_ga_sat_solver.py  start_point.py
src/genetic_algorithm_sat_solver_implementation/data/: bcp.cnf  dpll1.cnf  dpll2.cnf  dpll5.cnf
src/genetic_algorithm_sat_solver_implementation/dimacs_reader/: __init__.py  clause_reader.py  clauses_model.py
src/genetic_algorithm_sat_solver_implementation/genetic_algorithm/: __init__.py  auxilary_functions.py  genetic_algorithm.py  genetic_algorithm_model.py
tests/: test_auxiliary_functions.py  test_genetic_algorithm.py  test_genetic_algorithm_model.py
