[project]
name = "genetic-algorithm-sat-solver-implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "SofoklisTsi",email = "sofoklistsi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "genetic_algorithm_sat_solver_implementation", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
